// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-document-recycle-bin-item should handle non-existent document in recycle bin 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`delete-document-recycle-bin-item should permanently delete document from recycle bin 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
